# kafka-data-producer

./: Cargo.toml
src/: .main.rs.swp  main.rs
