[package]
name = "kafka-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["ssl"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
